--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -71,7 +71,7 @@
         <a href="/produtos">📦 Produtos</a>
         <a href="/movimentacoes">📦 Movimentações</a>
         <a href="/clientes">👤 Clientes</a>
-        <a href="/rcas">📈 RCAs</a>
+        <a href="/rcas">📈 RCA</a>
         <a href="/fornecedores">🏭 Fornecedores</a>
         <a href="/fluxo-caixa">💰 Fluxo de Caixa</a>
         <a href="/contas-a-pagar">💸 Contas a Pagar</a>
